Updated Code to somewhat match forge version layout